@@ -1,0 +1,16 @@
+This is the grandparent of a frame that redirects itself.
+That grandchild frame redirects from a page with text to an empty page.
+A successful test result is a blank grandchild frame.
+If the explanatory text on the grandchild frame is still there, the test has failed.
+
+
+--------
+Frame: '<!--framePath //<!--frame0-->-->'
+--------
+This is the parent of a frame that redirects itself.
+
+
+--------
+Frame: '<!--framePath //<!--frame0-->/<!--frame0-->-->'
+--------
+
