@@ -1,3 +1,14 @@
+2009-10-26  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Darin Adler.
+
+        <rdar://problem/7289467> and http://webkit.org/b/30798 - REGRESSION (r48687): www.myuhc.com doesn't load.
+
+        * fast/loader/grandparent-completion-starts-redirect-expected.txt: Added.
+        * fast/loader/grandparent-completion-starts-redirect.html: Added.
+        * fast/loader/resources/meta-redirect-to-notify-done.html: Added.
+        * fast/loader/resources/parent-of-redirect.html: Added.
+
 2009-10-26  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Sam Weinig.
